# mongo_bot

./: .env  bot.py  config.py  pyproject.toml
database/: mongo_db.py
handlers/: handlers.py
services/: mongo_service.py
shemas/: shemas.py
